bakkie_derive/tests/ui/fail/tool_on_enum.rs
use bakkie_derive::tool;

#[tool]
enum MyEnum {
    Variant1,
    Variant2,
}

fn main() {}