bakkie_derive/tests/ui/fail/tool_on_enum.stderr
error: expected `fn`
 --> tests/ui/fail/tool_on_enum.rs:4:1
  |
4 | enum MyEnum {
  | ^^^^
